Minor fixes for the ui on mobile

--- a/assets/css/core/zmedia.css
+++ b/assets/css/core/zmedia.css
@@ -66,6 +66,10 @@
         }
     }
 
+    .mobile {
+        display: block !important;
+    }
+
 }
 
 /* footer */
